Move brain4it-server-constants into brain4it-server.

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@
 /brain4it-server/brain4it-server-raspberrypi/target/
 /brain4it-server/brain4it-server-web/target/
 /brain4it-server/brain4it-server-android/target/
+/brain4it-server/brain4it-server-constants/target/
