Fix dependency to brain4it-lib-core.

--- a/brain4it-server/brain4it-server-web/pom.xml
+++ b/brain4it-server/brain4it-server-web/pom.xml
@@ -34,7 +34,7 @@
     </dependency>
     <dependency>
       <groupId>org.brain4it</groupId>
-      <artifactId>brain4it-lib</artifactId>
+      <artifactId>brain4it-lib-core</artifactId>
       <version>1.0</version>
     </dependency>
     <dependency>
