--- a/brain4it-manager/brain4it-manager-android/pom.xml
+++ b/brain4it-manager/brain4it-manager-android/pom.xml
@@ -6,7 +6,7 @@
 
   <parent>
     <groupId>org.brain4it</groupId>
-    <artifactId>brain4it-parent-pom</artifactId>
+    <artifactId>brain4it-manager</artifactId>
     <version>1.0</version>
   </parent>
 
