--- a/brain4it-server/brain4it-server-swing/src/main/conf/server.properties
+++ b/brain4it-server/brain4it-server-swing/src/main/conf/server.properties
@@ -37,9 +37,15 @@ storeClass=org.brain4it.server.store.FileSystemStore
 # call (command execution). By default its value is 300 seconds (5 minutes).
 #maxWaitTime=300
 
-#monitorTime: the maximum number of seconds that a HTTP monitoring connection 
-# will remain open. By default monitorTime is 10.
-#monitorTime=10
+# monitorMaxWaitTime: the maximum number of seconds to wait for an exterior 
+# function to return a value in a monitoring session. By default its value is
+#\u00a010 seconds.
+#monitorMaxWaitTime=10
+
+#monitorPingTime: the time in seconds between two consecutive ping messages 
+# sent to the client. Ping messages are sent to check if connection has been 
+# closed. By default monitorPingTime is 30 seconds.
+#monitorPingTime=30
 
 # keyStoreFile: the path of the key store file to enable secure server 
 # connections.
