New weather library to get data from weather stations.

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@
 /brain4it-server/brain4it-server-web/target/
 /brain4it-server/brain4it-server-android/target/
 /brain4it-server/brain4it-server-constants/target/
+/brain4it-web/target/
+/brain4it-web/
