--- a/brain4it-lib/pom.xml
+++ b/brain4it-lib/pom.xml
@@ -34,6 +34,7 @@
     <module>brain4it-lib-serial</module>
     <module>brain4it-lib-tts</module>
     <module>brain4it-lib-vision</module>
+    <module>brain4it-lib-weather</module>
     <module>brain4it-lib-xmpp</module>
   </modules>
 
