--- a/brain4it-server/brain4it-server-web/pom.xml
+++ b/brain4it-server/brain4it-server-web/pom.xml
@@ -69,6 +69,11 @@
     </dependency>
     <dependency>
       <groupId>org.brain4it</groupId>
+      <artifactId>brain4it-lib-weather</artifactId>
+      <version>1.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.brain4it</groupId>
       <artifactId>brain4it-lib-xmpp</artifactId>
       <version>1.0</version>
     </dependency>
