Refactor package vantage to davis in weather station library.

--- a/brain4it-lib/brain4it-lib-weather/src/main/resources/org/brain4it/lib/WeatherLibrary.properties
+++ b/brain4it-lib/brain4it-lib-weather/src/main/resources/org/brain4it/lib/WeatherLibrary.properties
@@ -1,12 +1,13 @@
 WeatherStation.synopsis = Gets data from a weather station.
 WeatherStation.station_type = The type of station to connect to. \
-Currently only "vantage" station type is supported.
+Currently only "davis" station type is supported.
 WeatherStation.address = The address of the weather station. The address \
-format is dependent of the station type. For "vantage" type stations, the \
+format is dependent of the station type. For "davis" type stations, the \
 address format is "<host>:<port>" or simply "<host>".
 WeatherStation.options = A list containing specific options of the station type.
 WeatherStation.data = A list containg name/value pairs for each weather \
 property returned by the station. The properties currently supported are the \
-following: timestamp, date, station-type, pressure, temperature, \
+following: station-info, timestamp, date, pressure, temperature, \
 temperature-inside, humidity, humidity-inside, rain, solar-radiation, \
 uv-radiation, wind-speed, wind-speed-avg and wind-direction.
+WeatherStation.IOException = when an error occurs accessing the weather station.
