New indicator widget type.

--- a/brain4it-manager/brain4it-manager-common/src/main/resources/org/brain4it/manager/widgets/resources/Widgets.properties
+++ b/brain4it-manager/brain4it-manager-common/src/main/resources/org/brain4it/manager/widgets/resources/Widgets.properties
@@ -66,6 +66,20 @@ image.url = the exterior function that provides the url of the image or video \
 to display. The supported image formats are JPEG, PNG and GIF. The only \
 supported video format is MJPEG.
 
+indicator = A widget to show an indicator value.
+indicator.label = a string representing the title of the indicator that is \
+displayed on top of its value. By default no title is shown.
+indicator.font-family = the font family of the indicator value. Supported \
+families are "lcd", "monospace" and "fontawesome" but other may also \
+be supported.
+indicator.units = a string that indicates the units of this indicator. \
+No units are displayed by default.
+indicator.max-value-length = the maximum number of characters of the indicator \
+value that will be displayed. If max-value-length is 0, the font size of \
+the indicator value will be adjusted to fit all its characters.
+indicator.get-value = the exterior function that provides the value of the \
+indicator.
+
 led = A led indicator that turns on and off depending on the value of a \
 exterior function.
 led.label = the text to paint under the led.
