Modify pom.xml files to replace the version number of brain4it artifacts by property ${brain4it-version}.

--- a/brain4it-client-java/pom.xml
+++ b/brain4it-client-java/pom.xml
@@ -20,12 +20,12 @@
     <dependency>
       <groupId>org.brain4it</groupId>
       <artifactId>brain4it-lang</artifactId>
-      <version>1.0</version>
+      <version>${brain4it-version}</version>
     </dependency>
     <dependency>
       <groupId>org.brain4it</groupId>
       <artifactId>brain4it-server-constants</artifactId>
-      <version>1.0</version>
+      <version>${brain4it-version}</version>
     </dependency>
   </dependencies>
 	
