--- a/brain4it-lib/brain4it-lib-core/pom.xml
+++ b/brain4it-lib/brain4it-lib-core/pom.xml
@@ -15,17 +15,17 @@
   
   <name>brain4it-lib-core</name>
   <description>brain4it core library</description>
-  
+    
   <dependencies>
     <dependency>
       <groupId>org.brain4it</groupId>
       <artifactId>brain4it-lang</artifactId>
-      <version>1.0</version>
+      <version>${brain4it-version}</version>
     </dependency>
     <dependency>
       <groupId>org.brain4it</groupId>
       <artifactId>brain4it-server-constants</artifactId>
-      <version>1.0</version>
+      <version>${brain4it-version}</version>
     </dependency>
   </dependencies>
   
