--- a/brain4it-manager/brain4it-manager-common/pom.xml
+++ b/brain4it-manager/brain4it-manager-common/pom.xml
@@ -15,7 +15,7 @@
     <dependency>
       <groupId>org.brain4it</groupId>
       <artifactId>brain4it-client-java</artifactId>
-      <version>1.0</version>
+      <version>${brain4it-version}</version>
     </dependency>
   </dependencies>
 
