--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
     <it-plugin.version>4.4.3</it-plugin.version>
+    <brain4it-version>1.0</brain4it-version>
   </properties>
 
 </project>
