--- a/brain4it-lib/brain4it-lib-database/pom.xml
+++ b/brain4it-lib/brain4it-lib-database/pom.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+
   <parent>
     <groupId>org.brain4it</groupId>
     <artifactId>brain4it-lib</artifactId>
@@ -13,11 +14,15 @@
   <name>brain4it-lib-database</name>
   <description>brain4it JDBC library</description>
 
+  <properties>
+    <brain4it-version>1.0</brain4it-version>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>org.brain4it</groupId>
       <artifactId>brain4it-lib-core</artifactId>
-      <version>1.0</version>
+      <version>${brain4it-version}</version>
     </dependency>
   </dependencies>
 
