--- a/brain4it-manager/brain4it-manager-android/pom.xml
+++ b/brain4it-manager/brain4it-manager-android/pom.xml
@@ -26,7 +26,7 @@
     <dependency>
       <groupId>org.brain4it</groupId>
       <artifactId>brain4it-manager-common</artifactId>
-      <version>1.0</version>
+      <version>${brain4it-version}</version>
     </dependency>
   </dependencies>
 
