--- a/brain4it-server/brain4it-server-common/pom.xml
+++ b/brain4it-server/brain4it-server-common/pom.xml
@@ -18,12 +18,12 @@
     <dependency>
       <groupId>org.brain4it</groupId>
       <artifactId>brain4it-lib-core</artifactId>
-      <version>1.0</version>
+      <version>${brain4it-version}</version>
     </dependency>
     <dependency>
       <groupId>org.brain4it</groupId>
       <artifactId>brain4it-client-java</artifactId>
-      <version>1.0</version>
+      <version>${brain4it-version}</version>
     </dependency>
   </dependencies>
 
