--- a/brain4it-server/brain4it-server-raspberrypi/pom.xml
+++ b/brain4it-server/brain4it-server-raspberrypi/pom.xml
@@ -30,7 +30,7 @@
     <dependency>
       <groupId>org.brain4it</groupId>
       <artifactId>brain4it-server-standalone</artifactId>
-      <version>1.0</version>
+      <version>${brain4it-version}</version>
     </dependency>
     <dependency>
       <groupId>com.pi4j</groupId>
@@ -46,42 +46,42 @@
         <dependency>
           <groupId>org.brain4it</groupId>
           <artifactId>brain4it-lib-database</artifactId>
-          <version>1.0</version>
+          <version>${brain4it-version}</version>
         </dependency>
         <dependency>
           <groupId>org.brain4it</groupId>
           <artifactId>brain4it-lib-mail</artifactId>
-          <version>1.0</version>
+          <version>${brain4it-version}</version>
         </dependency>
         <dependency>
           <groupId>org.brain4it</groupId>
           <artifactId>brain4it-lib-serial</artifactId>
-          <version>1.0</version>
+          <version>${brain4it-version}</version>
         </dependency>
         <dependency>
           <groupId>org.brain4it</groupId>
           <artifactId>brain4it-lib-tts</artifactId>
-          <version>1.0</version>
+          <version>${brain4it-version}</version>
         </dependency>
         <dependency>
           <groupId>org.brain4it</groupId>
           <artifactId>brain4it-lib-management</artifactId>
-          <version>1.0</version>
+          <version>${brain4it-version}</version>
         </dependency>
         <dependency>
           <groupId>org.brain4it</groupId>
           <artifactId>brain4it-lib-mqtt</artifactId>
-          <version>1.0</version>
+          <version>${brain4it-version}</version>
         </dependency>
         <dependency>
           <groupId>org.brain4it</groupId>
           <artifactId>brain4it-lib-vision</artifactId>
-          <version>1.0</version>
+          <version>${brain4it-version}</version>
         </dependency>
         <dependency>
           <groupId>org.brain4it</groupId>
           <artifactId>brain4it-lib-xmpp</artifactId>
-          <version>1.0</version>
+          <version>${brain4it-version}</version>
         </dependency>
       </dependencies>
     </profile>
