--- a/brain4it-server/brain4it-server-swing/pom.xml
+++ b/brain4it-server/brain4it-server-swing/pom.xml
@@ -18,7 +18,7 @@
     <dependency>
       <groupId>org.brain4it</groupId>
       <artifactId>brain4it-server-standalone</artifactId>
-      <version>1.0</version>
+      <version>${brain4it-version}</version>
     </dependency>
   </dependencies>
 
@@ -28,13 +28,38 @@
       <dependencies>
         <dependency>
           <groupId>org.brain4it</groupId>
+          <artifactId>brain4it-lib-database</artifactId>
+          <version>${brain4it-version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.brain4it</groupId>
+          <artifactId>brain4it-lib-mail</artifactId>
+          <version>${brain4it-version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.brain4it</groupId>
           <artifactId>brain4it-lib-serial</artifactId>
-          <version>1.0</version>
+          <version>${brain4it-version}</version>
         </dependency>
         <dependency>
           <groupId>org.brain4it</groupId>
           <artifactId>brain4it-lib-tts</artifactId>
-          <version>1.0</version>
+          <version>${brain4it-version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.brain4it</groupId>
+          <artifactId>brain4it-lib-management</artifactId>
+          <version>${brain4it-version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.brain4it</groupId>
+          <artifactId>brain4it-lib-mqtt</artifactId>
+          <version>${brain4it-version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.brain4it</groupId>
+          <artifactId>brain4it-lib-xmpp</artifactId>
+          <version>${brain4it-version}</version>
         </dependency>
       </dependencies>
     </profile>
