--- a/brain4it-server/brain4it-server-swing/src/main/conf/server.properties
+++ b/brain4it-server/brain4it-server-swing/src/main/conf/server.properties
@@ -39,13 +39,18 @@ storeClass=org.brain4it.server.store.FileSystemStore
 
 # monitorMaxWaitTime: the maximum number of seconds to wait for an exterior 
 # function to return a value in a monitoring session. By default its value is
-#\u00a010 seconds.
+# 10 seconds.
 #monitorMaxWaitTime=10
 
-#monitorPingTime: the time in seconds between two consecutive ping messages 
+# monitorPingTime: the time in seconds between two consecutive ping messages 
 # sent to the client. Ping messages are sent to check if connection has been 
 # closed. By default monitorPingTime is 30 seconds.
 #monitorPingTime=30
+
+# keepAliveTime: the maximum time in seconds that the server will keep an 
+# idle socket open in HTTP persistent connections. 
+# By default keepAliveTime is 5 seconds.
+#keepAliveTime=5
 
 # keyStoreFile: the path of the key store file to enable secure server 
 # connections.
