New module brain4it-common with I/O and network utility classes.

--- a/brain4it-lib/brain4it-lib-core/pom.xml
+++ b/brain4it-lib/brain4it-lib-core/pom.xml
@@ -27,6 +27,11 @@
       <artifactId>brain4it-server-constants</artifactId>
       <version>${brain4it-version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.brain4it</groupId>
+      <artifactId>brain4it-common</artifactId>
+      <version>${brain4it-version}</version>
+    </dependency>
   </dependencies>
   
   <build>
