--- a/brain4it-lib/brain4it-lib-core/src/main/resources/org/brain4it/lib/CoreLibrary.properties
+++ b/brain4it-lib/brain4it-lib-core/src/main/resources/org/brain4it/lib/CoreLibrary.properties
@@ -202,7 +202,7 @@ Spawn.executor_id = the identifier of the new executor.
 
 String.synopsis = Converts an expression to string.
 String.description = Converts the given expression of any type to string.
-String.expression = the expression to convert to string. 
+String.expression = the expression to convert to string.
 String.pattern = a Java DecimalFormat or "unicode" to convert number \
 to unicode char.
 String.locale = the locale of <pattern>.
@@ -233,7 +233,7 @@ specified.
 System.synopsis = Runs an operating system command.
 System.description = Runs the specified operating system command and waits \
 for response. It reads the standard output of this command and returns a \
-list that contains the lines read. 
+list that contains the lines read.
 System.command = the command to run with parameters.
 System.exit_code = the exit code returned by command.
 System.output = line read from standard output of command.
@@ -300,7 +300,7 @@ BitAnd.description = Returns the result of applying a bitwise AND operation on a
 BitAnd.result = an integer that is the result of a bitwise AND operation on its arguments.
 
 BitNot.synopsis = Bitwise NOT operation.
-BitNot.description = Returns the result of applying a bitwise NOT operation on the specified argument. 
+BitNot.description = Returns the result of applying a bitwise NOT operation on the specified argument.
 BitNot.result = an integer that is the result of a bitwise NOT operation on the specified argument.
 
 BitOr.synopsis = Bitwise OR operation.
@@ -316,7 +316,7 @@ BitShift.description = Shifts <int_value> the absolute number of <shift> bits \
 to the left if <shift> is negative or the right if <shift> is positive. \
 No shift is done when <shift> is zero.
 BitShift.shift = the number of bits to shift. \
-The signum of this parameter determines the direction of the shifting. 
+The signum of this parameter determines the direction of the shifting.
 BitShift.result = the result of shifting <int_value> the specified \
 number of bits.
 
@@ -452,7 +452,7 @@ Insert.synopsis = Inserts an element into a list.
 Insert.description = Inserts the specified element into the given list at the \
 specified index.
 Insert.lst = the list in which to insert the element.
-Insert.index = the index where the element is to be inserted. 
+Insert.index = the index where the element is to be inserted.
 Insert.element = the element to be inserted.
 Insert.result = the list passed as argument containing the new inserted \
 element.
@@ -507,9 +507,9 @@ Names.synopsis = Gets the names from a list.
 Names.description = Returns a new list that contains all the names of the \
 given list in order of appearance. If the list has no names, an empty \
 list is returned.
-Names.lst = the list from which to obtain the names. 
+Names.lst = the list from which to obtain the names.
 Names.result = a new list that contains all the names of the given list in \
-order of appearance. 
+order of appearance.
 
 Pop.synopsis = Extracts and returns the last element from a list.
 Pop.description = Extracts and returns the last element from the given list or \
@@ -558,7 +558,7 @@ Size.description = Returns the number of elements in the list.
 Size.lst = the list whose size is to be determined.
 Size.result = the number of elements in the list.
 
-Sort.synopsis = Sorts a list. 
+Sort.synopsis = Sorts a list.
 Sort.description = Returns a new list that is the result of sorting the \
 elements of given list. By default, this function sorts elements in ascending \
 order, but a comparator function can be specified to order in other ways.
@@ -572,7 +572,7 @@ specified comparator.
 
 Sublist.synopsis = Returns a sublist of a list.
 Sublist.description = Returns a new list that contains the elements from the \
-given list between from_index and to_index position. 
+given list between from_index and to_index position.
 Sublist.lst = the list from which to obtain a sublist.
 Sublist.from_index = the starting index of the sublist.
 Sublist.to_index = the ending index of the sublist (excluded). When omitted, \
@@ -850,7 +850,7 @@ Length.result = the number of characters of the given string.
 MatchString.synopsis = Matches a string with a regular expression.
 MatchString.description = Tells whether or not the given string matches \
 the specified regular expression.
-MatchString.str = the string to match. 
+MatchString.str = the string to match.
 MatchString.matches = true if string matches with <reg_exp>, false if not.
 
 ReplaceString.synopsis = Replaces all occurrences of a pattern in a string \
@@ -887,3 +887,42 @@ UpCase.synopsis = Converts string to uppercase.
 UpCase.description = Returns the specified string converted to uppercase.
 UpCase.str = the string to upcase.
 UpCase.result = the given string converted to uppercase.
+
+TimerSchedule.synopsis = Schedules a task for future execution.
+TimerSchedule.description = Schedules a task that will call the given user \
+function for execution after <delay> milliseconds. \n\
+If a <period> greater than zero is specified, the function will be called \
+repeatedly at intervals of <period> milliseconds. \n\
+Each function call will always run in a different executor, \
+so it does no matter how long it takes to finish. \n\
+By default, new calls are discarded while a previous one is still running. \
+To allow call overlap, set <overlap> parameter to true.
+
+TimerSchedule.func = the user function to execute.
+TimerSchedule.delay = the delay in milliseconds before calling the function.
+TimerSchedule.period = the period in milliseconds for repeated execution.
+TimerSchedule.overlap = when true call overlap is allowed. By default \
+<overlap> is false.
+TimerSchedule.task_id = the task identifier that will be used later to cancel \
+the task execution.
+
+TimerCancel.synopsis = Cancels a scheduled task.
+TimerCancel.description = Cancels the scheduled task identified by \
+<task_id> if it was created in the current context. \
+When <task_id> is not specified, all tasks associated with the current context \
+will be cancelled. \n\
+If the task is running when calling this function, it will continue to \
+completion, but it will never run again.
+TimerCancel.task_id = the task identifier.
+TimerCancel.cancelled = true if at least one task was cancelled, \
+false otherwise.
+
+TimerTasks.synopsis = Shows the current scheduled tasks.
+TimerTasks.description = Returns a list that contains the <task_id> and the \
+function code of the active tasks that were created in the current context.
+TimerTasks.task = the function associated with the task, named with \
+its <task_id>.
+
+
+
+
