Improve logging in standalone servers.

--- a/brain4it-server/brain4it-server-swing/src/main/conf/logging.properties
+++ b/brain4it-server/brain4it-server-swing/src/main/conf/logging.properties
@@ -1,10 +1,23 @@
 # Brain4it server logging configuration
 
-# global logging level
-.level=INFO
+# logging levels
 
-# console logging options
-handlers=java.util.logging.ConsoleHandler
+HttpServer.level=INFO
+MonitorService.level=INFO
+RestService.level=INFO
+ModuleManager.level=INFO
+
+handlers=java.util.logging.ConsoleHandler, java.util.logging.FileHandler
+
+# SimpleFormatter options
+java.util.logging.SimpleFormatter.format=[%1$tF %1$tT] [%4$-7s] %5$s %n
+
+# ConsoleHandler options
 java.util.logging.ConsoleHandler.level=FINEST
 java.util.logging.ConsoleHandler.formatter=java.util.logging.SimpleFormatter
-java.util.logging.SimpleFormatter.format=[%1$tF %1$tT] [%4$-7s] %5$s %n
+
+# FileHandler options
+java.util.logging.FileHandler.level=FINEST
+java.util.logging.FileHandler.formatter=java.util.logging.SimpleFormatter
+java.util.logging.FileHandler.pattern=../logs/server-%g.log
+java.util.logging.FileHandler.count=4
