Visual enhacements in android applications.

--- a/brain4it-manager/brain4it-manager-android/src/main/AndroidManifest.xml
+++ b/brain4it-manager/brain4it-manager-android/src/main/AndroidManifest.xml
@@ -46,5 +46,9 @@
               android:launchMode="standard"
               android:screenOrientation="portrait">
     </activity>
+    <activity android:name=".AboutActivity"
+              android:launchMode="standard"
+              android:screenOrientation="portrait">
+    </activity>
   </application>
 </manifest> 
