Improvements in exception handling.
Evaluation is now always done with the Context.evaluate(code) method.
When the evaluation throws an Exception this method converts it to a 
BException that contains the code that thrown the Exception and the 
stack of user function calls when the Exception was thrown.

--- a/brain4it-lib/brain4it-lib-core/src/main/resources/org/brain4it/lib/CoreLibrary.properties
+++ b/brain4it-lib/brain4it-lib-core/src/main/resources/org/brain4it/lib/CoreLibrary.properties
@@ -241,8 +241,9 @@ System.output = line read from standard output of command.
 Throw.synopsis = Throws an exception.
 Throw.description = Throws the exception object passed as argument.
 Throw.exception = the exception object. It can be an exception list \
-("ExceptionType" args...) or a list of elements that will be \
-converted to exception list.
+("ExceptionType" ...) or a string that represents the exception type.
+Throw.message = the message of the exception, when <exception> argument is \
+not a list.
 
 Try.synopsis = Executes code catching exceptions.
 Try.description = Executes the specified action catching exceptions with \
