--- a/brain4it-server/brain4it-server-raspberrypi/pom.xml
+++ b/brain4it-server/brain4it-server-raspberrypi/pom.xml
@@ -45,22 +45,17 @@
       <dependencies>
         <dependency>
           <groupId>org.brain4it</groupId>
+          <artifactId>brain4it-lib-core</artifactId>
+          <version>${brain4it-version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.brain4it</groupId>
           <artifactId>brain4it-lib-database</artifactId>
           <version>${brain4it-version}</version>
         </dependency>
         <dependency>
           <groupId>org.brain4it</groupId>
           <artifactId>brain4it-lib-mail</artifactId>
-          <version>${brain4it-version}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.brain4it</groupId>
-          <artifactId>brain4it-lib-serial</artifactId>
-          <version>${brain4it-version}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.brain4it</groupId>
-          <artifactId>brain4it-lib-tts</artifactId>
           <version>${brain4it-version}</version>
         </dependency>
         <dependency>
@@ -75,7 +70,32 @@
         </dependency>
         <dependency>
           <groupId>org.brain4it</groupId>
+          <artifactId>brain4it-lib-neural</artifactId>
+          <version>${brain4it-version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.brain4it</groupId>
+          <artifactId>brain4it-lib-nlp</artifactId>
+          <version>${brain4it-version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.brain4it</groupId>
+          <artifactId>brain4it-lib-serial</artifactId>
+          <version>${brain4it-version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.brain4it</groupId>
+          <artifactId>brain4it-lib-tts</artifactId>
+          <version>${brain4it-version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.brain4it</groupId>
           <artifactId>brain4it-lib-vision</artifactId>
+          <version>${brain4it-version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.brain4it</groupId>
+          <artifactId>brain4it-lib-weather</artifactId>
           <version>${brain4it-version}</version>
         </dependency>
         <dependency>
@@ -111,7 +131,7 @@
               <goal>single</goal>
             </goals>
           </execution>
-        </executions>      
+        </executions>
       </plugin>
     </plugins>
   </build>
