--- a/brain4it-server/brain4it-server-standalone/pom.xml
+++ b/brain4it-server/brain4it-server-standalone/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" 
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
@@ -9,13 +9,13 @@
     <artifactId>brain4it-server</artifactId>
     <version>1.0</version>
   </parent>
-      
+
   <artifactId>brain4it-server-standalone</artifactId>
   <packaging>jar</packaging>
-  
+
   <name>brain4it-server-standalone</name>
   <description>brain4it standalone server</description>
-  
+
   <dependencies>
     <dependency>
       <groupId>org.brain4it</groupId>
@@ -23,11 +23,16 @@
       <version>${brain4it-version}</version>
     </dependency>
   </dependencies>
-    
+
   <profiles>
     <profile>
       <id>full</id>
       <dependencies>
+        <dependency>
+          <groupId>org.brain4it</groupId>
+          <artifactId>brain4it-lib-core</artifactId>
+          <version>${brain4it-version}</version>
+        </dependency>
         <dependency>
           <groupId>org.brain4it</groupId>
           <artifactId>brain4it-lib-database</artifactId>
@@ -36,16 +41,6 @@
         <dependency>
           <groupId>org.brain4it</groupId>
           <artifactId>brain4it-lib-mail</artifactId>
-          <version>${brain4it-version}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.brain4it</groupId>
-          <artifactId>brain4it-lib-serial</artifactId>
-          <version>${brain4it-version}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.brain4it</groupId>
-          <artifactId>brain4it-lib-tts</artifactId>
           <version>${brain4it-version}</version>
         </dependency>
         <dependency>
@@ -60,13 +55,43 @@
         </dependency>
         <dependency>
           <groupId>org.brain4it</groupId>
+          <artifactId>brain4it-lib-neural</artifactId>
+          <version>${brain4it-version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.brain4it</groupId>
+          <artifactId>brain4it-lib-nlp</artifactId>
+          <version>${brain4it-version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.brain4it</groupId>
+          <artifactId>brain4it-lib-serial</artifactId>
+          <version>${brain4it-version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.brain4it</groupId>
+          <artifactId>brain4it-lib-tts</artifactId>
+          <version>${brain4it-version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.brain4it</groupId>
+          <artifactId>brain4it-lib-vision</artifactId>
+          <version>${brain4it-version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.brain4it</groupId>
+          <artifactId>brain4it-lib-weather</artifactId>
+          <version>${brain4it-version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.brain4it</groupId>
           <artifactId>brain4it-lib-xmpp</artifactId>
           <version>${brain4it-version}</version>
         </dependency>
       </dependencies>
     </profile>
   </profiles>
-    
+
   <build>
     <plugins>
       <plugin>
@@ -77,10 +102,10 @@
           <mainClass>org.brain4it.server.standalone.Runner</mainClass>
           <arguments>
             <argument>
-              -multiTenant=true              
+              -multiTenant=true
             </argument>
             <argument>
-              -basePath=/Users/realor/brain4it_modules_mt              
+              -basePath=/Users/realor/brain4it_modules_mt
             </argument>
           </arguments>
         </configuration>
@@ -99,7 +124,7 @@
               <goal>single</goal>
             </goals>
           </execution>
-        </executions>      
+        </executions>
       </plugin>
     </plugins>
   </build>
