--- a/brain4it-server/brain4it-server-web/src/main/webapp/WEB-INF/web.xml
+++ b/brain4it-server/brain4it-server-web/src/main/webapp/WEB-INF/web.xml
@@ -2,7 +2,7 @@
 <web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
     <context-param>
         <param-name>libraries</param-name>
-        <param-value>Database,Mail,Mqtt,Management,Vision,Weather,Xmpp</param-value>
+        <param-value>Database,Mail,Management,Mqtt,Neural,Nlp,Serial,Vision,Weather,Xmpp</param-value>
     </context-param>
     <servlet>
         <description>Rest API Servlet</description>
