Set random weights with nn-weights function.

--- a/brain4it-lib/brain4it-lib-neural/src/main/resources/org/brain4it/lib/NeuralLibrary.properties
+++ b/brain4it-lib/brain4it-lib-neural/src/main/resources/org/brain4it/lib/NeuralLibrary.properties
@@ -49,13 +49,13 @@ NeuralWeights.synopsis=Gets or sets the weights of a neural network.
 NeuralWeights.net_id=the identifier of the neural network whose \
 weights are going to be get or set.
 NeuralWeights.new_weights=a list that contains the new weights of the network \
-connections.
+connections or null to assign random weights.
 NeuralWeights.weights=a list that contains the current weights of the network \
 connections.
 NeuralWeights.description=When <new_weights> is specified this function \
 replaces the current weights of the neuron connections by the values of \
-<new_weights>. If <new_weights> is not specified, this function returns the \
-current weights of the neuron connections. The number of weights depends on \
-the configuration of the network. \n\
+<new_weights>. If <new_weights> is null, connections are initialized with \
+random weights. When <new_weights> is not specified, this function returns the \
+current weights of the neuron connections. \n\
 This function is used to save and restore the state of a neural network \
 after it has been trained.
