New conditional function when (when condition action ... action). It can be used in combination with the cond function.

--- a/brain4it-lib/brain4it-lib-core/src/main/resources/org/brain4it/lib/CoreLibrary.properties
+++ b/brain4it-lib/brain4it-lib-core/src/main/resources/org/brain4it/lib/CoreLibrary.properties
@@ -26,12 +26,9 @@ argument, like do, while, etc.
 Comment.param = commented code or a descriptive text.
 
 Cond.synopsis = Multiple conditional function.
-Cond.description = Executes the actions of the first condition that \
-evaluates to true.
-Cond.condition_actions = a condition and its associated actions.
-Cond.condition = the condition to evaluate.
-Cond.action = the actions to execute when the condition is true.
-Cond.result = the result of evaluating the last action.
+Cond.description = Executes the actions of the first when clause which \
+condition evaluates to true.
+Cond.when_clause = a when clause (when condition action ... action).
 
 Delete.synopsis = Deletes a variable from the current context.
 Delete.description = Deletes the specified variable from the local scope \
@@ -114,6 +111,7 @@ Help.result = a help list when format is "list" or a string when format is "stri
 If.synopsis = Conditional function.
 If.description = Executes action_when_true when condition is true \
 or action_when_false otherwise.
+If.condition = the condition to evaluate.
 If.action_when_true = expression to evaluate when codition is true.
 If.action_when_false = expression to evaluate when condition is false.
 If.result = the last evaluated expression or null if no action is executed.
@@ -285,10 +283,19 @@ Watch.value = the value to compare with the result of evaluating expression. \
 If omitted, value is assigned the result of expression.
 Watch.result = the result of expression.
 
-While.synopsis = Executes code while a condition is true.
-While.description = Executes the specified action sequence while the given \
+When.synopsis = Executes a code block when a condition is true.
+When.description = Executes the specified sequence of actions if the given \
 condition is true.
-While.condition = condition to evaluate. When evaluates to false, loop ends.
+When.condition = the condition to evaluate. When it evaluates to false, \
+the actions are not executed.
+When.action = an action to execute.
+When.result = the result of evaluating the condition.
+
+While.synopsis = Executes a code block while a condition is true.
+While.description = Executes the specified sequence of actions while the given \
+condition is true.
+While.condition = the condition to evaluate. When it evaluates to false, \
+the loop ends.
 While.action = an action to execute in each iteration.
 While.result = the result of evaluating the last action.
 
