--- a/brain4it-server/brain4it-server-raspberrypi/pom.xml
+++ b/brain4it-server/brain4it-server-raspberrypi/pom.xml
@@ -38,16 +38,11 @@
       <version>1.2-SNAPSHOT</version>
     </dependency>
   </dependencies>
-
+  
   <profiles>
     <profile>
       <id>full</id>
       <dependencies>
-        <dependency>
-          <groupId>org.brain4it</groupId>
-          <artifactId>brain4it-lib-core</artifactId>
-          <version>${brain4it-version}</version>
-        </dependency>
         <dependency>
           <groupId>org.brain4it</groupId>
           <artifactId>brain4it-lib-database</artifactId>
@@ -104,6 +99,26 @@
           <version>${brain4it-version}</version>
         </dependency>
       </dependencies>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <configuration>
+              <descriptor>assembly.xml</descriptor>
+              <finalName>brain4it-server-raspberrypi-full-${project.version}</finalName>
+            </configuration>
+            <executions>
+              <execution>
+                <phase>package</phase>
+                <goals>
+                  <goal>single</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
     </profile>
   </profiles>
 
