--- a/brain4it-server/brain4it-server-standalone/pom.xml
+++ b/brain4it-server/brain4it-server-standalone/pom.xml
@@ -30,11 +30,6 @@
       <dependencies>
         <dependency>
           <groupId>org.brain4it</groupId>
-          <artifactId>brain4it-lib-core</artifactId>
-          <version>${brain4it-version}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.brain4it</groupId>
           <artifactId>brain4it-lib-database</artifactId>
           <version>${brain4it-version}</version>
         </dependency>
@@ -89,6 +84,26 @@
           <version>${brain4it-version}</version>
         </dependency>
       </dependencies>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <configuration>
+              <descriptor>assembly.xml</descriptor>
+              <finalName>brain4it-server-standalone-full-${project.version}</finalName>
+            </configuration>
+            <executions>
+              <execution>
+                <phase>package</phase>
+                <goals>
+                  <goal>single</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
     </profile>
   </profiles>
 
