Improve the input validation in the forms of the Manager applications.

--- a/brain4it-manager/brain4it-manager-swing/src/main/resources/org/brain4it/manager/swing/resources/Manager.properties
+++ b/brain4it-manager/brain4it-manager-swing/src/main/resources/org/brain4it/manager/swing/resources/Manager.properties
@@ -95,15 +95,6 @@ Designer.value = Value
 About.property = Property
 About.value = Value
 
-ListModules.message={0} modules found.
-CreateModule.result=Module {0} created.
-DestroyModule.question=Destroy module {0}?
-DestroyModule.result=Module {0} destroyed.
-RemoveNode.question=Remove {0}?
-DeleteData.question=Delete {0}?
-DiscardChanges=Discard changes in {0}?
-ConfirmSaveWorkspace=The workspace was modified. Save changes?
-
 Open=Open
 Save=Save
 Import=Import
@@ -117,3 +108,21 @@ FindDialog.next=Next
 FindDialog.replace=Replace
 FindDialog.replaceAll=Replace all
 FindDialog.cancel=Cancel
+
+FileExistsOverwrite=File already exists, overwrite it?
+LeaveBlankServerKey=(leave blank to access with server key)
+ListModules.message={0} modules found.
+CreateModule.result=Module {0} created.
+EditModule.result=Module {0} modified.
+DestroyModule.question=Destroy module {0}?
+DestroyModule.result=Module {0} destroyed.
+RemoveNode.question=Remove {0}?
+DeleteData.question=Delete {0}?
+DiscardChanges=Discard changes in {0}?
+ConfirmSaveWorkspace=The workspace was modified. Save changes?
+ServerNameMandatory=Server name is mandatory
+ServerURLMandatory=Server URL is mandatory
+ModuleNameMandatory=Module name is mandatory
+InvalidURL=Invalid URL
+ImportCompleted=Import completed.
+ExportCompleted=Export completed.
