Improvements in Nlp library. - New functions nlp-parse, nlp-tokenize, nlp-lemmatize and nlp-sentences - Update apache opennlp library to version 1.9.1

--- a/brain4it-lib/brain4it-lib-nlp/src/main/resources/org/brain4it/lib/NlpLibrary.properties
+++ b/brain4it-lib/brain4it-lib-nlp/src/main/resources/org/brain4it/lib/NlpLibrary.properties
@@ -1,8 +1,46 @@
-Nlp.synopsis = Creates a natural language parse tree.
-Nlp.description = Returns a natural language parse tree of the given text. \
+NlpParse.synopsis = Creates a natural language parse tree.
+NlpParse.description = Returns a natural language parse tree of the given text. \
 This tree represents the grammatical structure of the text. 
-Nlp.str = the sentence to parse.
-Nlp.model_path = the path to the NLP model file. When no specified, \
-<model_path> is assumed to be <${user.home}/en-parser-chunking.bin>. \
+NlpParse.sentence = the sentence to parse.
+NlpParse.parse_tree = a list that represents the parse tree.
+NlpParse.FileNotFoundException = when the specified model file is not found.
+
+NlpLemmatize.synopsis = Gets the lemma of a word.
+NlpLemmatize.description = Returns the lemma (canonical form) of the specified \
+word and POS tag.
+NlpLemmatize.word = the word which lemma is to be obtained.
+NlpLemmatize.pos = the POS (part of speech) tag corresponding to the word.
+NlpLemmatize.lemma = the lemma of the specified word. When that word is \
+not found in the dictionary the same word is returned. 
+NlpLemmatize.FileNotFoundException = when the specified model file is not found.
+
+NlpSentences.synopsis = Splits text into sentences.
+NlpSentences.description = Returns a list that contains the sentences of the \
+specified text.
+NlpSentences.text = the text to split into sentences.
+NlpSentences.sentences = a list of sentences (strings).
+NlpSentences.FileNotFoundException = when the specified model file is not found.
+
+NlpTokenize.synopsis = Extracts tokens from text.
+NlpTokenize.description = Returns a list that contains the tokens (strings) \
+of the specified text.
+NlpTokenize.text = the text to split into tokens.
+NlpTokenize.tokens = a list of tokens (strings).
+NlpTokenize.FileNotFoundException = when the specified model file is not found.
+
+parser_model_path = the path to the parser model file. When no specified, \
+<parser_model_path> is assumed to be <${user.home}/en-parser-chunking.bin>.\n\
 See <http://opennlp.apache.org> documentation for more details.
-Nlp.parse_tree = a list that represents the parse tree.
+tokenizer_model_path = the path to the tokenizer model file. \
+When no specified, <tokenizer_model_path> is assumed to be \
+<${user.home}/en-token.bin>.\nWhen <tokenizer_model_path> is an empty string a \
+whitespace tokenizer will be used.
+sentence_model_path = the path to the sentence detector model file. \
+When no specified, <sentence_model_path> is assumed to be \
+<${user.home}/en-sent.bin>.\nWhen <sentence_model_path> is an empty string a \
+newline sentence detector will be used.
+dict_path = the path to the dictionary lemmatizer file. \
+When no specified, <dict_path> is assumed to be \
+<${user.home}/en-lemmatizer.dict>.\nWhen <dict_path> is an empty string no \
+lemmatization will be performed.
+
