--- a/brain4it-lib/brain4it-lib-nlp/src/main/resources/org/brain4it/lib/NlpLibrary.properties
+++ b/brain4it-lib/brain4it-lib-nlp/src/main/resources/org/brain4it/lib/NlpLibrary.properties
@@ -28,6 +28,20 @@ NlpTokenize.text = the text to split into tokens.
 NlpTokenize.tokens = a list of tokens (strings).
 NlpTokenize.FileNotFoundException = when the specified model file is not found.
 
+NlpTranslate.synopsis = Translates text.
+NlpTranslate.description = Translates a list of strings to a target <language> \
+using the specified translation <service>.
+NlpTranslate.text = a text to translate.
+NlpTranslate.source = the source language (ISO 639-1 code). \
+Some translation services ignore this parameter as they detect the source \
+language automatically.
+NlpTranslate.target = the target language (ISO 639-1 code).
+NlpTranslate.service = the name of the translation service \
+(for example, "google").
+NlpTranslate.options = a list containing service specific parameters like \
+credentials, operation mode, etc.
+NlpTranslate.translation = the translation of the corresponding input string.
+
 parser_model_path = the path to the parser model file. When no specified, \
 <parser_model_path> is assumed to be <${user.home}/en-parser-chunking.bin>.\n\
 See <http://opennlp.apache.org> documentation for more details.
