New nlp-postag function to tag text.

--- a/brain4it-lib/brain4it-lib-nlp/src/main/resources/org/brain4it/lib/NlpLibrary.properties
+++ b/brain4it-lib/brain4it-lib-nlp/src/main/resources/org/brain4it/lib/NlpLibrary.properties
@@ -1,9 +1,19 @@
 NlpParse.synopsis = Creates a natural language parse tree.
-NlpParse.description = Returns a natural language parse tree of the given text. \
+NlpParse.description = Returns a natural language parse tree of the given text.\
 This tree represents the grammatical structure of the text. 
 NlpParse.sentence = the sentence to parse.
+NlpParse.parses = the number of parse trees to generate. \
+By default <parses> is 1.
 NlpParse.parse_tree = a list that represents the parse tree.
 NlpParse.FileNotFoundException = when the specified model file is not found.
+
+NlpPosTag.synopsis = Gets the POS tags of a word list.
+NlpPosTag.description = Returns a list that contains a pair (tag word) for \
+each input word.
+NlpPosTag.tag = the POS tag.
+NlpPosTag.word = the word which tag is to be obtained.
+NlpPosTag.input_word = the input word. 
+NlpPosTag.FileNotFoundException = when the specified model file is not found.
 
 NlpLemmatize.synopsis = Gets the lemma of a word.
 NlpLemmatize.description = Returns the lemma (canonical form) of the specified \
@@ -20,6 +30,7 @@ specified text.
 NlpSentences.text = the text to split into sentences.
 NlpSentences.sentences = a list of sentences (strings).
 NlpSentences.FileNotFoundException = when the specified model file is not found.
+NlpSentences.sentence = a sentence extracted from <text>.
 
 NlpTokenize.synopsis = Extracts tokens from text.
 NlpTokenize.description = Returns a list that contains the tokens (strings) \
@@ -45,16 +56,19 @@ NlpTranslate.translation = the translation of the corresponding input string.
 parser_model_path = the path to the parser model file. When no specified, \
 <parser_model_path> is assumed to be <${user.home}/en-parser-chunking.bin>.\n\
 See <http://opennlp.apache.org> documentation for more details.
+pos_model_path = the path to the POS (part of speech) file. \
+When not specified, <pos_model_path> is assumed to be \
+<${user.home}/en-pos-maxent.bin>.
 tokenizer_model_path = the path to the tokenizer model file. \
-When no specified, <tokenizer_model_path> is assumed to be \
+When not specified, <tokenizer_model_path> is assumed to be \
 <${user.home}/en-token.bin>.\nWhen <tokenizer_model_path> is an empty string a \
 whitespace tokenizer will be used.
 sentence_model_path = the path to the sentence detector model file. \
-When no specified, <sentence_model_path> is assumed to be \
+When not specified, <sentence_model_path> is assumed to be \
 <${user.home}/en-sent.bin>.\nWhen <sentence_model_path> is an empty string a \
 newline sentence detector will be used.
 dict_path = the path to the dictionary lemmatizer file. \
-When no specified, <dict_path> is assumed to be \
+When not specified, <dict_path> is assumed to be \
 <${user.home}/en-lemmatizer.dict>.\nWhen <dict_path> is an empty string no \
 lemmatization will be performed.
 
